--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -34,4 +34,12 @@
         android:layout_alignParentStart="true"
         android:layout_alignTop="@+id/scan_button" />
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/scan_progress_bar"
+        android:visibility="invisible"
+        android:layout_above="@+id/list_bt_devices"
+        android:layout_toStartOf="@+id/scan_button" />
+
 </RelativeLayout>
